k8s/mariadb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mariadb-service
spec:
  selector:
    app: razarion-mariadb
  ports:
    - port: 3306
      targetPort: 3306
  clusterIP: None
